# poor-mans-ui

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  taskfile.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: daisyui.instructions.md  fasthtml.instructions.md
.github/workflows/: ci.yml
infra/: README.md
notebooks/: README.md
src/poor_mans_ui/: config.py  constants.py  errors.py  logger.py  main.py  version.py
tests/: conftest.py
